[workspace]
members = [
    "crates/core",
    "crates/cli", 
    "treehouse", "flappy",
]

resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Erwin Acher <erwin.acher@gmail.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
